--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.469.0",
