--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
