chore: 프론트엔드 CI 빌드 시 lint 경고 무시하도록 수정

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build React app
-        run: npm run build
+      - name: Build React app (ignore lint warnings)
+        run: CI='' npm run build
 
